clang/test/BSC/Negative/OwnedStruct/access/owned-struct-private-static-variable-access.cbs
// RUN: %clang_cc1 -verify %s

owned struct A {
    static int a;
};

int A::a = 1; // ok

int main() {
    A a = {};
    a.a = 1; // expected-error {{'a' is a private member of 'struct A'}}
    A::a = 2; // expected-error {{'a' is a private member of 'struct A'}}
    return 0;
}